samples/_failures_safe/1761725468_06dfba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34e73757.c: In function ‘bfs’:
./samples/SAFE/__tmp_34e73757.c:161:9: error: expected declaration or statement at end of input
  161 |         }
      |         ^
./samples/SAFE/__tmp_34e73757.c:161:9: error: expected declaration or statement at end of input
